--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --out-dir prod --public-url='./'"
+    "build": "parcel build src/index.html --out-dir prod --public-url='./' --no-cache"
   },
   "keywords": [],
   "author": "Aamnah <hello@aamnah.com> (https://aamnah.com/)",
