--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --out-dir prod --public-url='./' --no-cache"
+    "build": "parcel build src/index.html --out-dir 'dist' --public-url='./' --no-cache"
   },
   "keywords": [],
   "author": "Aamnah <hello@aamnah.com> (https://aamnah.com/)",
